# openmun-opendata

./: .gitignore  DATA_SOURCES.md  LICENSE  README.md  pyproject.toml
importers/: __init__.py  base.py  bfs_country_importer.py
openmun_opendata/: __init__.py  countries.py
openmun_opendata/geo/: __init__.py  base.py  municipalities.py  postal_codes.py  streets.py
openmun_opendata/geo/models/: __init__.py  municipalities.py  postal_codes.py  streets.py
scripts/: download_geodata.py
sources/bfs/: be-b-00.04-sg-01.xlsx  metadata.json
tests/: __init__.py  test_countries.py
